# simemu

./: .gitignore  .keel  AGENTS.md  AUTONOMOUS_EXECUTION.md  CLAUDE.md  KEEL_ROADMAP_PROPOSAL.md  MANIFEST.in  Makefile  ONE_OFF.md  PRODUCT_IT_WAS_MEANT_TO_BE.md  README.md  install.sh  pyproject.toml
docs/: AGENT_README.md  NEXT_LEVEL.md  adding-to-project.md  shared-desktop-plan.md
docs/integration-kit/: AGENTS-simemu-snippet.md  README.md  execution.yaml
keel/: project.json
keel/spaces/: spaces.json
keel/tasks/: T-001.json  T-002.json  T-003.json  T-004.json  T-005.json  T-006.json  T-007.json  T-008.json  T-009.json  T-010.json  T-011.json  T-012.json  T-013.json  T-014.json  T-015.json  T-016.json  T-017.json  T-018.json  T-019.json  T-020.json  T-021.json  T-022.json  T-023.json  T-024.json  T-025.json  T-026.json  T-027.json  T-028.json  T-029.json  T-030.json  T-031.json  T-032.json  T-033.json  T-034.json  T-035.json  T-036.json  T-037.json  T-LU-001.json  T-LU-002.json  T-LU-003.json  (+33 more)
keel/waves/: waves.json
simemu/: __init__.py  android.py  claim_policy.py  cli.py  completions.py  create.py  dashboard.py  desktop_lease.py  device.py  device_aliases.py  discover.py  fed.py  genymotion.py  ios.py  monitor.py  schema.py  server.py  session.py  state.py  trace.py  visibility.py  watchdog.py  window.py
simemu/swift/: Makefile  Package.swift
simemu/swift/Sources/SimEmuBar/: AllocationCard.swift  Design.swift  LureCard.swift  MainView.swift  MemoryHeader.swift  QuickActions.swift  SimEmuApp.swift  SimEmuState.swift
simemu/ui/: __init__.py  menubar.py
tests/: test_android.py  test_android_launch_args.py  test_claim_policy.py  test_cli.py  test_crash_safe.py  test_create.py  test_desktop_lease.py  test_device.py  test_device_aliases.py  test_discover.py  test_do_commands.py  test_docs_regression.py  test_ios.py  test_maintenance.py  test_monitor.py  test_schema.py  test_server.py  test_session.py  test_state.py  test_trace.py  test_tvos.py  test_visibility.py  test_watchdog.py  test_window.py
views/: architecture.md  decisions.md  roadmap.md  tasks.md
