[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "simemu"
version = "0.3.0"
description = "Simulator allocation manager for multi-agent iOS/Android development"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
api = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.0",
    "zeroconf>=0.131.0",
]

[project.scripts]
simemu = "simemu.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["simemu*"]
