[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "simemu"
version = "0.3.0"
description = "Session-based simulator and emulator allocation manager for multi-agent iOS/Android development"
requires-python = ">=3.11"
dependencies = []
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "vykeai"}]
keywords = ["simulator", "emulator", "ios", "android", "testing", "automation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Environment :: MacOS X",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Testing",
]

[project.urls]
Repository = "https://github.com/vykeai/simemu"

[project.optional-dependencies]
api = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.0",
    "zeroconf>=0.131.0",
]

[project.scripts]
simemu = "simemu.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["simemu*"]
exclude = ["tests*", "simemu/swift*"]

[tool.setuptools.package-data]
simemu = ["py.typed"]
