[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "simemu"
version = "0.1.0"
description = "Simulator allocation manager for multi-agent iOS/Android development"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
keywords = ["ios", "android", "simulator", "emulator", "testing", "agents"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: MacOS X",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Testing",
]
dependencies = []

[project.optional-dependencies]
api = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.0",
    "zeroconf>=0.131.0",
]

[project.urls]
Homepage = "https://github.com/vykeai/simemu"
Repository = "https://github.com/vykeai/simemu"
Issues = "https://github.com/vykeai/simemu/issues"

[project.scripts]
simemu = "simemu.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["simemu*"]

[tool.setuptools.package-data]
simemu = ["py.typed"]
